<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stSafetyGuard" Id="{a8e1bc6c-f854-4b8c-8dfb-cf6078bc0532}">
    <Declaration><![CDATA[TYPE stSafetyGuard :
STRUCT
	//R//
	error_code			:INT;
	state						:INT;
	shuttle_crash_detector_left					:BOOL;
	shuttle_crash_detector_right				:BOOL;
	emergency_stop									:BOOL;
	limit_switch_right								:BOOL;
	limit_switch_left									:BOOL;
	limit_switch_bottom							:BOOL;
	interlock_front_left								:BOOL;
	interlock_front_right							:BOOL;
	interlock_rear_right								:BOOL;
	interlock_rear_left								:BOOL;
	interlock_shuttle_door							:BOOL;
	Interlock_maintenace_door					:BOOL;
	Interlock_spit_door								:BOOL;
	Init_Done											:BOOL;
	Error													:BOOL;

	//W//	
	Initialize			:BOOL;
	SetOff			:BOOL;

	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>